--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "AirTrafficSim" %}
-{% set version = "0.0.0" %}
+{% set version = "0.0.1" %}
 
 package:
   name: {{ name|lower }}
@@ -8,14 +8,16 @@ package:
 source:
   # url: https://github.com/HKUST-OCTAD-LAB/AirTrafficSim/releases/download/{{ version }}/AirTrafficSim-{{ version }}.tar.gz
   url: https://github.com/HKUST-OCTAD-LAB/AirTrafficSim/archive/v{{ version }}.tar.gz
-  sha256: 7649bb473a2176bb9de00bf16ff1803c0bf5ea97a4f2e1e134dceb0209ee2a25
+  sha256: 649a0b2809163d65b7f95c1a8485d38ae7c6f2b9f3b88d61a5a88f225c04789c
+  # Command to get sha256
+  # curl -sL https://github.com/HKUST-OCTAD-LAB/AirTrafficSim/archive/v0.0.0.tar.gz | openssl sha256
 
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
   number: 0
   entry_points:
-    - "airtrafficsim = airtrafficsim:main"
+    - "airtrafficsim = airtrafficsim.__main__:main"
 
 requirements:
   host:
